@@ -9,6 +9,7 @@ API : changed : zbuff prototypes now generate deprecation warnings
 API : changed : streaming decompression implicit reset on starting new frame
 API : added experimental : dictID retrieval functions
 zlib_wrapper : added support for gz* functions, by Przemyslaw Skibinski
+Changed : zbuff source files moved to lib/deprecated
 Changed : reduced stack memory use
 
 v1.1.1
